--- a/.pylintrc
+++ b/.pylintrc
@@ -24,7 +24,6 @@ load-plugins=
 
 [MESSAGES CONTROL]
 
-disable="Missing method docstring"
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -40,7 +39,8 @@ disable="Missing method docstring"
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-#disable=
+#disable="Missing method docstring",
+disable=C0111,
 
 
 [REPORTS]
