commented out tmux commands modified "better" paste from clipboard added no complete from ropevim to .vimrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,6 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # move x clipboard into tmux paste buffer
-bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+bind-key C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 # move tmux copy buffer into x clipboard
-bind C-y run "tmux save-buffer - | xclip -i"
+bind-key C-y run "tmux save-buffer - | xclip -i"
