--- a/.pylintrc
+++ b/.pylintrc
@@ -21,6 +21,7 @@ persistent=yes
 # usually to register additional checkers.
 load-plugins=
 
+extension-pkg-whitelist=numpy,pandas
 
 [MESSAGES CONTROL]
 
@@ -119,9 +120,7 @@ additional-builtins=
 
 
 [TYPECHECK]
-# work around Pandas error for "generator" error
-generated-members=pandas.*
-#
+
 # Tells whether missing members accessed in mixin class should be ignored. A
 # mixin class is detected if its name ends with "mixin" (case insensitive).
 ignore-mixin-members=yes
@@ -137,7 +136,9 @@ zope=no
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E0201 when accessed. Python regular
 # expressions are accepted.
-generated-members=REQUEST,acl_users,aq_parent
+
+# includes work around Pandas error for "generator" error
+generated-members=REQUEST,acl_users,aq_parent,pandas.*
 
 
 [BASIC]
