--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -16,13 +16,13 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: monaco # should be "Menlo" or something on macOS.
+    family: monospace # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
 
   # The bold font face
   bold:
-    family: monaco # should be "Menlo" or something on macOS.
+    family: monospace # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Bold
 
@@ -37,13 +37,13 @@ font:
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
   offset:
-    x: 2.0
+    x: 5.0
     y: -7.0
 
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
-  use_thin_strokes: true
+  use_thin_strokes: false
 
 # Should display the render timer
 render_timer: false
@@ -134,51 +134,51 @@ colors:
 # specified string every time that binding is activated. These should generally
 # be escape sequences, but they can be configured to send arbitrary strings of
 # bytes. Possible values of `action` include `Paste` and `PasteSelection`.
-key_bindings:
-  - { key: V,        mods: Command, action: Paste                        }
-  - { key: C,        mods: Command, action: Copy                         }
-  - { key: Home,                    chars: "\x1b[H",   mode: ~AppCursor  }
-  - { key: Home,                    chars: "\x1b[1~",  mode: AppCursor   }
-  - { key: End,                     chars: "\x1b[F",   mode: ~AppCursor  }
-  - { key: End,                     chars: "\x1b[4~",  mode: AppCursor   }
-  - { key: PageUp,                  chars: "\x1b[5~"                     }
-  - { key: PageDown,                chars: "\x1b[6~"                     }
-  - { key: Left,     mods: Shift,   chars: "\x1b[1;2D"                   }
-  - { key: Left,     mods: Control, chars: "\x1b[1;5D"                   }
-  - { key: Left,     mods: Alt,     chars: "\x1b[1;3D"                   }
-  - { key: Left,                    chars: "\x1b[D",   mode: ~AppCursor  }
-  - { key: Left,                    chars: "\x1bOD",   mode: AppCursor   }
-  - { key: Right,    mods: Shift,   chars: "\x1b[1;2C"                   }
-  - { key: Right,    mods: Control, chars: "\x1b[1;5C"                   }
-  - { key: Right,    mods: Alt,     chars: "\x1b[1;3C"                   }
-  - { key: Right,                   chars: "\x1b[C",   mode: ~AppCursor  }
-  - { key: Right,                   chars: "\x1bOC",   mode: AppCursor   }
-  - { key: Up,       mods: Shift,   chars: "\x1b[1;2A"                   }
-  - { key: Up,       mods: Control, chars: "\x1b[1;5A"                   }
-  - { key: Up,       mods: Alt,     chars: "\x1b[1;3A"                   }
-  - { key: Up,                      chars: "\x1b[A",   mode: ~AppCursor  }
-  - { key: Up,                      chars: "\x1bOA",   mode: AppCursor   }
-  - { key: Down,     mods: Shift,   chars: "\x1b[1;2B"                   }
-  - { key: Down,     mods: Control, chars: "\x1b[1;5B"                   }
-  - { key: Down,     mods: Alt,     chars: "\x1b[1;3B"                   }
-  - { key: Down,                    chars: "\x1b[B",   mode: ~AppCursor  }
-  - { key: Down,                    chars: "\x1bOB",   mode: AppCursor   }
-  - { key: Tab,      mods: Shift,   chars: "\x1b[Z"                      }
-  - { key: F1,                      chars: "\x1bOP"                      }
-  - { key: F2,                      chars: "\x1bOQ"                      }
-  - { key: F3,                      chars: "\x1bOR"                      }
-  - { key: F4,                      chars: "\x1bOS"                      }
-  - { key: F5,                      chars: "\x1b[15~"                    }
-  - { key: F6,                      chars: "\x1b[17~"                    }
-  - { key: F7,                      chars: "\x1b[18~"                    }
-  - { key: F8,                      chars: "\x1b[19~"                    }
-  - { key: F9,                      chars: "\x1b[20~"                    }
-  - { key: F10,                     chars: "\x1b[21~"                    }
-  - { key: F11,                     chars: "\x1b[23~"                    }
-  - { key: F12,                     chars: "\x1b[24~"                    }
-  - { key: Back,                    chars: "\x7f"                        }
-  - { key: Delete,                  chars: "\x1b[3~",  mode: AppKeypad   }
-  - { key: Delete,                  chars: "\x1b[P",   mode: ~AppKeypad  }
+#key_bindings:
+#  - { key: V,        mods: Command, action: Paste                        }
+#  - { key: C,        mods: Command, action: Copy                         }
+#  - { key: Home,                    chars: "\x1b[H",   mode: ~AppCursor  }
+#  - { key: Home,                    chars: "\x1b[1~",  mode: AppCursor   }
+#  - { key: End,                     chars: "\x1b[F",   mode: ~AppCursor  }
+#  - { key: End,                     chars: "\x1b[4~",  mode: AppCursor   }
+#  - { key: PageUp,                  chars: "\x1b[5~"                     }
+#  - { key: PageDown,                chars: "\x1b[6~"                     }
+#  - { key: Left,     mods: Shift,   chars: "\x1b[1;2D"                   }
+#  - { key: Left,     mods: Control, chars: "\x1b[1;5D"                   }
+#  - { key: Left,     mods: Alt,     chars: "\x1b[1;3D"                   }
+#  - { key: Left,                    chars: "\x1b[D",   mode: ~AppCursor  }
+#  - { key: Left,                    chars: "\x1bOD",   mode: AppCursor   }
+#  - { key: Right,    mods: Shift,   chars: "\x1b[1;2C"                   }
+#  - { key: Right,    mods: Control, chars: "\x1b[1;5C"                   }
+#  - { key: Right,    mods: Alt,     chars: "\x1b[1;3C"                   }
+#  - { key: Right,                   chars: "\x1b[C",   mode: ~AppCursor  }
+#  - { key: Right,                   chars: "\x1bOC",   mode: AppCursor   }
+#  - { key: Up,       mods: Shift,   chars: "\x1b[1;2A"                   }
+#  - { key: Up,       mods: Control, chars: "\x1b[1;5A"                   }
+#  - { key: Up,       mods: Alt,     chars: "\x1b[1;3A"                   }
+#  - { key: Up,                      chars: "\x1b[A",   mode: ~AppCursor  }
+#  - { key: Up,                      chars: "\x1bOA",   mode: AppCursor   }
+#  - { key: Down,     mods: Shift,   chars: "\x1b[1;2B"                   }
+#  - { key: Down,     mods: Control, chars: "\x1b[1;5B"                   }
+#  - { key: Down,     mods: Alt,     chars: "\x1b[1;3B"                   }
+#  - { key: Down,                    chars: "\x1b[B",   mode: ~AppCursor  }
+#  - { key: Down,                    chars: "\x1bOB",   mode: AppCursor   }
+#  - { key: Tab,      mods: Shift,   chars: "\x1b[Z"                      }
+#  - { key: F1,                      chars: "\x1bOP"                      }
+#  - { key: F2,                      chars: "\x1bOQ"                      }
+#  - { key: F3,                      chars: "\x1bOR"                      }
+#  - { key: F4,                      chars: "\x1bOS"                      }
+#  - { key: F5,                      chars: "\x1b[15~"                    }
+#  - { key: F6,                      chars: "\x1b[17~"                    }
+#  - { key: F7,                      chars: "\x1b[18~"                    }
+#  - { key: F8,                      chars: "\x1b[19~"                    }
+#  - { key: F9,                      chars: "\x1b[20~"                    }
+#  - { key: F10,                     chars: "\x1b[21~"                    }
+#  - { key: F11,                     chars: "\x1b[23~"                    }
+#  - { key: F12,                     chars: "\x1b[24~"                    }
+#  - { key: Back,                    chars: "\x7f"                        }
+#  - { key: Delete,                  chars: "\x1b[3~",  mode: AppKeypad   }
+#  - { key: Delete,                  chars: "\x1b[P",   mode: ~AppKeypad  }
 
 # Mouse bindings
 #
@@ -202,4 +202,4 @@ mouse_bindings:
 # Shell
 #
 # You can set this to a path to your favorite shell, e.g. /bin/fish
-shell: /usr/bin/zsh
+shell:
