added vi mode explicitly

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,10 @@
-# smart pane switching with awareness of vim splits
-#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+# set repeat time
+set-option -g repeat-time 100
+set-window-option mode-keys vi 
 
 # move x clipboard into tmux paste buffer
 bind-key C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
+
 # move tmux copy buffer into x clipboard
 bind-key C-y run "tmux save-buffer - | xclip -i"
 
