working vi mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,10 @@
 # set repeat time
 set-option -g repeat-time 100
-set-window-option mode-keys vi 
+set-window-option -g mode-keys vi 
 
 # move x clipboard into tmux paste buffer
-bind-key C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
-
-# move tmux copy buffer into x clipboard
-bind-key C-y run "tmux save-buffer - | xclip -i"
+#bind-key C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
+#bind-key C-y run "tmux save-buffer - | xclip -i"
 
 # # vim-like pane switching
 bind -r k select-pane -U
