--- a/.pylintrc
+++ b/.pylintrc
@@ -12,7 +12,7 @@ profile=no
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS
+ignore=CVS,.git
 
 # Pickle collected data for later comparisons.
 persistent=yes
@@ -23,8 +23,11 @@ load-plugins=
 
 extension-pkg-whitelist=numpy,pandas
 
-[MESSAGES CONTROL]
+# avoid E1101
+# http://stackoverflow.com/questions/33961756/disabling-pylint-no-member-e1101-error-for-specific-libraries
+generated-members=pandas.*
 
+[MESSAGES CONTROL]
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
