added left and right pane resize bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,10 @@
 set-option -g repeat-time 100
 set-window-option -g mode-keys vi 
 
+# resize panes
+bind -r L resize-pane -L 10
+bind -r R resize-pane -R 10 
+
 # move x clipboard into tmux paste buffer
 #bind-key C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 #bind-key C-y run "tmux save-buffer - | xclip -i"
