--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,39 @@
+# mostly taken from: http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+
+# panes
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
+
+## Status bar design
+# status line
+set -g status-utf8 on
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
+
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
+
+#window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+
+# window status
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-current-bg colour0
+setw -g window-status-current-fg colour11
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
+
 # set repeat time
 set-option -g repeat-time 100
 set-window-option -g mode-keys vi 
@@ -5,10 +41,7 @@ set-window-option -g mode-keys vi
 # resize panes
 bind -r L resize-pane -L 10
 bind -r R resize-pane -R 10 
-
-# move x clipboard into tmux paste buffer
-#bind-key C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
-#bind-key C-y run "tmux save-buffer - | xclip -i"
+bind -r E select-layout tiled
 
 # # vim-like pane switching
 bind -r k select-pane -U
@@ -21,3 +54,6 @@ unbind Up
 unbind Down
 unbind Left
 unbind Right
+
+# do not rename windows after I change then
+set-option -g allow-rename off
