--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,9 @@ set-window-option -g mode-keys vi
 
 # resize panes
 bind -r L resize-pane -L 10
-bind -r R resize-pane -R 10 
+bind -r H resize-pane -R 10 
+bind -r K resize-pane -U 10 
+bind -r J resize-pane -D 10 
 bind -r E select-layout tiled
 
 # # vim-like pane switching
