--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,13 +37,13 @@ setw -g window-status-attr reverse
 
 # set repeat time
 set-option -g repeat-time 100
-set-window-option -g mode-keys vi 
+set-window-option -g mode-keys vi
 
 # resize panes
 bind -r L resize-pane -L 10
-bind -r H resize-pane -R 10 
-bind -r K resize-pane -U 10 
-bind -r J resize-pane -D 10 
+bind -r H resize-pane -R 10
+bind -r K resize-pane -U 10
+bind -r J resize-pane -D 10
 bind -r E select-layout tiled
 
 # # vim-like pane switching
@@ -60,3 +60,38 @@ unbind Right
 
 # do not rename windows after I change then
 set-option -g allow-rename off
+
+# attempt to keep X11 forwarding working
+set -g update-environment "\
+  CLUTTER_IM_MODULE \
+  DBUS_SESSION_BUS_ADDRESS \
+  DBUS_SESSION_BUS_ADDRESS \
+  DEFAULTS_PATH \
+  DESKTOP_AUTOSTART_ID \
+  DESKTOP_SESSION \
+  DISPLAY \
+  GDMSESSION \
+  GNOME_DESKTOP_SESSION_ID \
+  GPG_AGENT_INFO \
+  GTK_IM_MODULE \
+  GTK_MODULES \
+  SESSION_MANAGER \
+  SSH_AGENT_PID \
+  SSH_ASKPASS \
+  SSH_AUTH_SOCK \
+  SSH_CONNECTION \
+  WINDOWID \
+  WINDOWPATH \
+  XAUTHORITY \
+  XDG_CONFIG_DIRS \
+  XDG_CURRENT_DESKTOP \
+  XDG_DATA_DIRS \
+  XDG_MENU_PREFIX \
+  XDG_RUNTIME_DIR \
+  XDG_SEAT \
+  XDG_SESSION_DESKTOP \
+  XDG_SESSION_ID \
+  XDG_SESSION_TYPE \
+  XDG_VTNR \
+  XMODIFIERS \
+  "
