trying to keep X setting across ssh sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,7 +69,7 @@ set -g update-environment "\
   DEFAULTS_PATH \
   DESKTOP_AUTOSTART_ID \
   DESKTOP_SESSION \
-  DISPLAY \
+  #DISPLAY \
   GDMSESSION \
   GNOME_DESKTOP_SESSION_ID \
   GPG_AGENT_INFO \
