--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g pane-active-border-fg brightred
 set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
-set -g status-fg colour12
+set -g status-fg colour11
 set -g status-interval 2
 
 
@@ -20,13 +20,13 @@ set -g message-command-fg blue
 set -g message-command-bg black
 
 #window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -g mode-bg colour7
+setw -g mode-fg colour2
 
 # window status
 setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=blue]#[fg=colour7] #W "
 setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
 setw -g window-status-current-bg colour0
 setw -g window-status-current-fg colour11
