--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,9 @@ setw -g window-status-attr reverse
 set-option -g repeat-time 100
 set-window-option -g mode-keys vi 
 
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
+
 # resize panes
 bind -r L resize-pane -L 10
 bind -r H resize-pane -R 10 
