--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,6 @@ set -g pane-active-border-fg brightred
 
 ## Status bar design
 # status line
-set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour11
@@ -66,35 +65,11 @@ set-option -g allow-rename off
 
 # attempt to keep X11 forwarding working
 set -g update-environment "\
-  CLUTTER_IM_MODULE \
-  DBUS_SESSION_BUS_ADDRESS \
-  DBUS_SESSION_BUS_ADDRESS \
-  DEFAULTS_PATH \
-  DESKTOP_AUTOSTART_ID \
-  DESKTOP_SESSION \
-  #DISPLAY \
-  GDMSESSION \
-  GNOME_DESKTOP_SESSION_ID \
+  DISPLAY \
   GPG_AGENT_INFO \
-  GTK_IM_MODULE \
-  GTK_MODULES \
-  SESSION_MANAGER \
   SSH_AGENT_PID \
   SSH_ASKPASS \
   SSH_AUTH_SOCK \
   SSH_CONNECTION \
-  WINDOWID \
-  WINDOWPATH \
   XAUTHORITY \
-  XDG_CONFIG_DIRS \
-  XDG_CURRENT_DESKTOP \
-  XDG_DATA_DIRS \
-  XDG_MENU_PREFIX \
-  XDG_RUNTIME_DIR \
-  XDG_SEAT \
-  XDG_SESSION_DESKTOP \
-  XDG_SESSION_ID \
-  XDG_SESSION_TYPE \
-  XDG_VTNR \
-  XMODIFIERS \
   "
